Separate javascript and add final editing changes

--- a/about.html
+++ b/about.html
@@ -66,12 +66,12 @@
                   neurons in the brain to make connections, and help with development in all areas of learning.
                </p>
             </div>
-            <h3 class="senses-info-right"> Sight <i class="far fa-eye" aria-hidden="true"></i> </h3>
-            <div class="solid-blue solid-background">
+            <h3 class="right-align senses-heading"> Sight <i class="far fa-eye" aria-hidden="true"></i> </h3>
+            <div class="solid-blue solid-background senses-area">
                <img src="./assets/images/play-by-sight.jpg"
                   alt="a young girl and her grandmother circling their eyes with their hands like glasses"
                   class="square-image play-by-pic">
-               <p class="right-align">
+               <p class="right-align senses-paragraph">
                   The most commonly stimulated sense for young children is sight. From birth, babies are given
                   brightly
                   coloured and patterned toys to look at and play with.
@@ -83,13 +83,13 @@
                   memory as to how things work.
                </p>
             </div>
-            <h3 class="senses-info-left">Sound <i class="fas fa-assistive-listening-systems"
+            <h3 class="left-align senses-heading">Sound <i class="fas fa-assistive-listening-systems"
                aria-hidden="true"></i></h3>
-            <div class="solid-pink solid-background">
+            <div class="solid-pink solid-background senses-area-reverse">
                <img src="./assets/images/play-by-sound.jpg"
                   alt="a young girl holding up a home made tin and string phone to her ear"
                   class="square-image play-by-pic">
-               <p class="left-align">
+               <p class="left-align senses-paragraph">
                   Many toys for young children feature music and other various sounds. Music is extremely important
                   for
                   children and many learn best when a concept is set to music. Music can encourage motor skills
@@ -101,11 +101,11 @@
                   and development.
                </p>
             </div>
-            <h3 class="senses-info-right">Smell <i class="fas fa-bacon" aria-hidden="true"></i></h3>
-            <div class="solid-grey solid-background">
+            <h3 class="right-align senses-heading">Smell <i class="fas fa-bacon" aria-hidden="true"></i></h3>
+            <div class="solid-grey solid-background senses-area">
                <img src="./assets/images/play-by-smell.jpg" alt="a young girl smelling a flower"
                   class="square-image play-by-pic">
-               <p class="right-align">
+               <p class="right-align senses-paragraph">
                   The sense of smell helps children to identify scents they like or don’t like and can be incorporated
                   into planning in many ways. Try adding an array of fragrances into your treasure box, such as
                   coffee,
@@ -114,11 +114,11 @@
                   new scents and build on their learning through their sense of smell.
                </p>
             </div>
-            <h3 class="senses-info-left">Touch <i class="fas fa-hand-sparkles" aria-hidden="true"></i></h3>
-            <div class="solid-green solid-background">
+            <h3 class="left-align senses-heading">Touch <i class="fas fa-hand-sparkles" aria-hidden="true"></i></h3>
+            <div class="solid-green solid-background senses-area-reverse">
                <img src="./assets/images/play-by-touch.jpg" alt="a young girl playing with a bead and metal toy"
                   class="square-image play-by-pic">
-               <p class="left-align">
+               <p class="left-align senses-paragraph">
                   The sense of touch can be best explored through textures and messy play. Young babies like to
                   snuggle in
                   with soft blankets and investigate treasure baskets, older babies and toddlers will enjoy messy play
@@ -127,11 +127,11 @@
                   for texture such as rough and smooth, wet puddles, tree bark and some plants.
                </p>
             </div>
-            <h3 class="senses-info-right">Taste <i class="fas fa-grin-tongue" aria-hidden="true"></i></h3>
-            <div class="solid-peach solid-background">
+            <h3 class="right-align senses-heading">Taste <i class="fas fa-grin-tongue" aria-hidden="true"></i></h3>
+            <div class="solid-peach solid-background senses-area">
                <img src="./assets/images/play-with-mum.jpg"
                   alt="a young mum and her daughter sorting through drinking cups" class="square-image play-by-pic">
-               <p class="right-align">
+               <p class="right-align senses-paragraph">
                   Through the sense of taste children will get to explore new foods, fruits and vegetables and decide
                   which ones they like and do not like. Finger foods are a good way to encourage independence for
                   toddlers
@@ -417,21 +417,6 @@
       <script src="https://kit.fontawesome.com/bd9c348b33.js" crossorigin="anonymous"></script>
       <!--Javascript from W3 schools tutorial for sticky nav bar
          https://www.w3schools.com/howto/tryit.asp?filename=tryhow_js_navbar_sticky-->
-      <script>
-         window.onscroll = function () {
-            myFunction()
-         }
-         
-         var header = document.getElementById("header");
-         var sticky = header.offsetTop;
-         
-         function myFunction() {
-            if (window.pageYOffset >= sticky) {
-               header.classList.add("sticky")
-            } else {
-               header.classList.remove("sticky");
-            }
-         }
-      </script>
+         <script src="assets/javascript/script.js"></script>
    </body>
 </html>
