--- a/contact.html
+++ b/contact.html
@@ -117,21 +117,6 @@
       <script src="https://kit.fontawesome.com/bd9c348b33.js" crossorigin="anonymous"></script>
       <!--Javascript from W3 schools tutorial for sticky nav bar
          https://www.w3schools.com/howto/tryit.asp?filename=tryhow_js_navbar_sticky-->
-      <script>
-         window.onscroll = function () {
-            myFunction()
-         }
-         
-         var header = document.getElementById("header");
-         var sticky = header.offsetTop;
-         
-         function myFunction() {
-            if (window.pageYOffset >= sticky) {
-               header.classList.add("sticky")
-            } else {
-               header.classList.remove("sticky");
-            }
-         }
-      </script>
+         <script src="assets/javascript/script.js"></script>
    </body>
 </html>
