--- a/index.html
+++ b/index.html
@@ -63,8 +63,8 @@
                      be experiencing. Most of all they will have fun!
                   </p>
                   <h3 class="text-area">What can I do as a parent?</h3>
-                  <!--The onclick code was taken from the following stack overflow chat https://stackoverflow.com/questions/2906582/how-to-create-an-html-button-that-acts-like-a-link#:~:text=The%20plain%20HTML%20way%20is,URL%20in%20the%20action%20attribute.&text=If%20necessary%2C%20set%20CSS%20display,type%3D%22submit%22%3E%20.-->
-                  <button id="learn-more" onclick="location.href='about.html'">Learn More</button>
+                  <br>
+                  <a id="learn-more" href="about.html">Learn More</a>
                </div>
             </div>
          </section>
@@ -93,21 +93,6 @@
       <script src="https://kit.fontawesome.com/bd9c348b33.js" crossorigin="anonymous"></script>
       <!--Javascript from W3 schools tutorial for sticky nav bar
          https://www.w3schools.com/howto/tryit.asp?filename=tryhow_js_navbar_sticky-->
-      <script>
-         window.onscroll = function () {
-            myFunction()
-         }
-         
-         var header = document.getElementById("header");
-         var sticky = header.offsetTop;
-         
-         function myFunction() {
-            if (window.pageYOffset >= sticky) {
-               header.classList.add("sticky")
-            } else {
-               header.classList.remove("sticky");
-            }
-         }
-      </script>
+      <script src="assets/javascript/script.js"></script>
    </body>
 </html>
