Adjust several styling changes

--- a/feedback.html
+++ b/feedback.html
@@ -51,7 +51,7 @@
             </div>
             <div id="feedback-container">
                <h3 class="solid-peach feed-sub">Feedback</h3>
-               <div class="solid-peach feedback-section senses-info-left">
+               <div class="solid-peach feedback-section">
                   <div class="feedback-grid">
                      <div class="feedback-image">
                         <img src="assets/images/dad-1.jpg"
@@ -125,10 +125,12 @@
                      </div>
                   </div>
                </div>
+               <br>
+               <br>
                <!--Recommendations Section-->
                <div id="recommendations-container">
                   <h3 class="solid-pink feed-sub">Recommendations</h3>
-                  <div class="solid-pink feedback-section senses-info-left">
+                  <div class="solid-pink feedback-section">
                      <div class="recommendations-grid">
                         <div class="feedback-image">
                            <img src="assets/images/mum-4.jpg"
@@ -238,6 +240,6 @@
       <script src="https://kit.fontawesome.com/bd9c348b33.js" crossorigin="anonymous"></script>
       <!--Javascript from W3 schools tutorial for sticky nav bar
          https://www.w3schools.com/howto/tryit.asp?filename=tryhow_js_navbar_sticky-->
-         <script src="assets/javascript/script.js"></script>
+      <script src="assets/javascript/script.js"></script>
    </body>
 </html>
