Add final style changes

--- a/contact.html
+++ b/contact.html
@@ -79,13 +79,13 @@
                         </div>
                         <label for="feedback-page" class="form-labels">Feedback on our website </label>
                         <textarea id="feedback-page" name="feedback-on-website"
-                           class="text-area-pane">Please provide us with any feedback on our site...</textarea>
+                           class="text-area-pane" placeholder="Please provide us with any feedback on our site..."></textarea>
                         <label for="questions" class="form-labels">Questions </label>
                         <textarea id="questions" name="questions"
-                           class="text-area-pane">Please ask us any questions/enquiries you may have...</textarea>
+                           class="text-area-pane" placeholder="Please ask us any questions/enquiries you may have..."></textarea>
                         <label for="recommendations-page" class="form-labels">Recommendations </label>
                         <textarea id="recommendations-page" name="Recommendations"
-                           class="text-area-pane">Let us know any personal Sensory Play recommendations you would like to make...</textarea>
+                           class="text-area-pane" placeholder="Let us know any personal Sensory Play recommendations you would like to make..."></textarea>
                         <button class="submit-info" type="submit">Submit</button>
                      </form>
                   </div>
@@ -97,11 +97,8 @@
          <!--Footer-->
          <div id="footer-logo">
             <a href="index.html">
-               <i class="fas fa-hand-holding-heart"></i>
-               <h4>Play Eternal</h4>
+               <h4>Play Eternal <i class="fas fa-hand-holding-heart"></i></h4>
             </a>
-            <br>
-            <p>Copyright@ClairePotter2021</p>
          </div>
          <ul>
             <li><a href="https://www.facebook.com/" target="_blank" aria-label="a link to facebook" rel="noreferrer"><i
@@ -112,6 +109,7 @@
             <li><a href="https://twitter.com/" target="_blank" aria-label="a link to twitter" rel="noreferrer"><i
                class="fab fa-twitter-square"></i></a></li>
          </ul>
+         <p>Copyright@ClairePotter2021</p>
       </footer>
       <!-- Font awesome script-->
       <script src="https://kit.fontawesome.com/bd9c348b33.js" crossorigin="anonymous"></script>
