--- a/index.html
+++ b/index.html
@@ -73,11 +73,8 @@
       <footer>
          <div id="footer-logo">
             <a href="index.html">
-               <i class="fas fa-hand-holding-heart" aria-hidden="true"></i>
-               <h4>Play Eternal</h4>
+               <h4>Play Eternal  <i class="fas fa-hand-holding-heart" aria-hidden="true"></i></h4>
             </a>
-            <br>
-            <p>Copyright@ClairePotter2021</p>
          </div>
          <ul>
             <li><a href="https://www.facebook.com/" target="_blank" aria-label="a link to facebook" rel="noreferrer"><i
@@ -88,6 +85,7 @@
             <li><a href="https://twitter.com/" target="_blank" aria-label="a link to twitter" rel="noreferrer"><i
                class="fab fa-twitter-square"></i></a></li>
          </ul>
+         <p>Copyright@ClairePotter2021</p>
       </footer>
       <!-- Font awesome script-->
       <script src="https://kit.fontawesome.com/bd9c348b33.js" crossorigin="anonymous"></script>
